87: Attempt to fix Java 8 method reference reload